Fix display overflow on article dates

--- a/css/master.css
+++ b/css/master.css
@@ -164,8 +164,8 @@ a:visited {
     display: block;
 }
 .posthead time .m, .posthead time .y {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
 }
 .posthead time .d {
-    font-size: 2rem;
+    font-size: 1.9rem;
 }
